Updated inclusion of tinyplug, to pluginlib. Changed the init process of algorithms, they are now loaded as needed when the asset is getting initialized.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 3.9)
 project(DayTrender)
+
 set(CMAKE_INSTALL_RPATH "\$ORIGIN")
 set(CMAKE_BUILD_WITH_INSTALL_RPATH true)
+
 file(GLOB DAYTRENDER_SRCS ./src/*.cpp ./src/api/*.cpp ./src/data/*.cpp)
 file(COPY ./src/data/candle.h DESTINATION ${PROJECT_BINARY_DIR}/include)
+
 add_executable(daytrender ${DAYTRENDER_SRCS})
 add_executable(dtbuild ./src/dtbuild/dtbuild.cpp)
 
@@ -22,6 +25,7 @@ find_package(OpenSSL REQUIRED)
 # setting up fountain
 add_library(fountain SHARED IMPORTED)
 set_target_properties(fountain PROPERTIES IMPORTED_LOCATION ../lib/fountain/build/libfountain.so)
+file(COPY lib/fountain/build/libfountain.so DESTINATION .)
 target_include_directories(daytrender PRIVATE lib/fountain/build/include)
 
 # setting up hxutils
@@ -34,8 +38,8 @@ target_include_directories(dtbuild PRIVATE lib/hxutils/build/include)
 # setting up cpphttplib
 target_include_directories(daytrender PRIVATE lib/cpp-httplib/include)
 
-# setting up tinyplug
-target_include_directories(daytrender PRIVATE lib/tinyplug/include)
+# setting up pluginlib
+target_include_directories(daytrender PRIVATE lib/pluginlib/include)
 
 # linking daytrender libraries
 target_link_libraries(daytrender PRIVATE fountain hxutils nlohmann_json OpenSSL::SSL OpenSSL::Crypto)
