--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 #vscode files and such
 .vscode/
-daytrender.code-workspace
 
-#ignoring build files
-build/
-
-#ignoring the csv files that are filled with credentials and such
-res/keys.json
-res/serverinfo.json
+resources/bin/
