Removed unnecessary imports and changed the clients from named variables to indeces in an array of clients in order for better handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(DayTrender)
 set(CMAKE_INSTALL_RPATH "\$ORIGIN")
 set(CMAKE_BUILD_WITH_INSTALL_RPATH true)
 
-file(GLOB DAYTRENDER_SRCS ./src/*.cpp ./src/api/*.cpp ./src/data/*.cpp)
+file(GLOB DAYTRENDER_SRCS ./src/*.cpp ./src/api/*.cpp ./src/data/*.cpp ./src/interface/*.cpp)
 file(COPY ./src/data/candle.h DESTINATION ${PROJECT_BINARY_DIR}/include)
 
 add_executable(daytrender ${DAYTRENDER_SRCS})
