Added match_deflist function to compare a definition list to a token to see if it is of a certain non-terminal type.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ file(CREATE_LINK ../config config SYMBOLIC)
 file(CREATE_LINK ../algorithms algorithms SYMBOLIC)
 
 add_executable(daytrender ${DAYTRENDER_SRCS})
-add_executable(dtbuild ./src/dtbuild/dtbuild.cpp src/dtbuild/lexer.cpp)
+add_executable(dtbuild ./src/dtbuild/dtbuild.cpp src/dtbuild/lexer.cpp src/dtbuild/parser.cpp)
 
 # setting properties
 set_target_properties(daytrender PROPERTIES CXX_STANDARD 17)
