Fleshed out parser and generator more. Parser can now parse more complicated texts and generator can generate c++ code for all inputs the parser can handle as of yet. Created macros for defining grammar so as to simplify the process.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,15 @@ set(CMAKE_INSTALL_RPATH "\$ORIGIN")
 set(CMAKE_BUILD_WITH_INSTALL_RPATH true)
 
 file(GLOB DAYTRENDER_SRCS ./src/*.cpp ./src/api/*.cpp ./src/data/*.cpp ./src/interface/*.cpp)
-file(COPY src/data/candle.h DESTINATION algorithms/include)
+file(GLOB DTBUILD_SRCS ./src/dtbuild/*.cpp)
+file(COPY src/data/algodefs.h src/data/candle.h DESTINATION algorithms/include)
 
 file(CREATE_LINK ../resources resources SYMBOLIC)
 file(CREATE_LINK ../config config SYMBOLIC)
 file(CREATE_LINK ../algorithms algorithms SYMBOLIC)
 
 add_executable(daytrender ${DAYTRENDER_SRCS})
-add_executable(dtbuild ./src/dtbuild/dtbuild.cpp src/dtbuild/lexer.cpp src/dtbuild/parser.cpp)
+add_executable(dtbuild ${DTBUILD_SRCS})
 
 # setting properties
 set_target_properties(daytrender PROPERTIES CXX_STANDARD 17)
