Changed folder structure to move headers to separate include directory and got daytrender to compilable state (albeit without compiling strategies, interace utils, or clients

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,11 @@ set(CMAKE_INSTALL_RPATH "\$ORIGIN")
 set(CMAKE_BUILD_WITH_INSTALL_RPATH true)
 
 # globbing sources for daytrender
-
-file(GLOB DAYTRENDER_SRCS src/*.cpp src/api/*.cpp src/data/*.cpp src/interface/*.cpp src/util/*.cpp)
+file(GLOB DAYTRENDER_SRCS "src/daytrender.cpp" "src/api/*.cpp" "src/data/*.cpp" "src/util/impl.cpp")
 file(GLOB STRATEGY_TYPES_SRCS src/data/strategydata.cpp src/data/indicator.cpp src/data/candle.cpp)
 file(GLOB CLIENT_TYPES_SRCS src/data/assetinfo.cpp src/data/accountinfo.cpp src/data/candle.cpp)
 
 # creating symlinks so files can be shared between build folder and project folder
-
 file(CREATE_LINK ../config config SYMBOLIC)
 file(CREATE_LINK ../strategies strategies SYMBOLIC)
 file(CREATE_LINK ../clients clients SYMBOLIC)
@@ -24,36 +22,54 @@ add_executable(daytrender ${DAYTRENDER_SRCS})
 # stops cmake from prepending lib before plugin names
 set(CMAKE_SHARED_LIBRARY_PREFIX "")
 
-# compiling each strategies plugin
-file(GLOB STRAT_SRCS "ext/strategies/*.cpp")
+# ################################################################################
+# #		COMPILING STRATEGIES
+# ################################################################################
+# file(GLOB STRAT_SRCS "ext/strategies/*.cpp")
 
-foreach(STRAT ${STRAT_SRCS})
-	# get filename without folder or extension
-	get_filename_component(FILENAME ${STRAT} NAME_WE)
-	# create shared object for it
-	add_library(${FILENAME} SHARED ${STRAT} ${STRATEGY_TYPES_SRCS})
-	# tell it to go to strategies folder
-	set_target_properties(${FILENAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/strategies)
-	target_include_directories(${FILENAME} PRIVATE "src/data" "src/api")
-endforeach()
+# foreach(STRAT ${STRAT_SRCS})
+# 	# get filename without folder or extension
+# 	get_filename_component(FILENAME ${STRAT} NAME_WE)
+# 	# create shared object for it
+# 	add_library(${FILENAME} SHARED ${STRAT} ${STRATEGY_TYPES_SRCS})
+# 	# tell it to go to strategies folder
+# 	set_target_properties(${FILENAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/strategies)
+# 	target_include_directories(${FILENAME} PRIVATE "include")
 
-# compiling each client plugin
-file(GLOB CLIENT_SRCS "ext/clients/*.cpp")
+# endforeach()
 
-foreach(CLIENT ${CLIENT_SRCS})
-	# get filename without folder or extension
-	get_filename_component(FILENAME ${CLIENT} NAME_WE)
-	# create shared object for it
-	add_library(${FILENAME} SHARED ${CLIENT} ${CLIENT_TYPES_SRCS})
-	# tell it to go to strategies folder
-	set_target_properties(${FILENAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/clients)
-	target_include_directories(${FILENAME} PRIVATE "src/data" "src/api" "lib/cpp-httplib/include" "lib/cxx-logger/include")
-	target_link_libraries(${FILENAME} PRIVATE OpenSSL::SSL OpenSSL::Crypto)
-endforeach()
+# ################################################################################
+# #		COMPILING CLIENTS
+# ################################################################################
+# file(GLOB CLIENT_SRCS "ext/clients/*.cpp")
 
-# copying over the website source
+# foreach(CLIENT ${CLIENT_SRCS})
+# 	# get filename without folder or extension
+# 	get_filename_component(FILENAME ${CLIENT} NAME_WE)
+# 	# create shared object for it
+# 	add_library(${FILENAME} SHARED ${CLIENT} ${CLIENT_TYPES_SRCS})
+# 	# tell it to go to strategies folder
+# 	set_target_properties(${FILENAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/clients)
+# 	target_include_directories(${FILENAME} PRIVATE
+# 		"include"
+# 		"lib/cpp-httplib/include"
+# 		"lib/cxx-logger/include"
+# 	)
+# 	target_link_libraries(${FILENAME} PRIVATE OpenSSL::SSL OpenSSL::Crypto)
+
+# endforeach()
+
+
+################################################################################
+#		HANDLING WEB INTERFACE
+################################################################################
 file(READ src/interface/webinterface.html WEBINTERFACE_HTML)
 file(WRITE src/interface/webinterface.inc "R\"=====(${WEBINTERFACE_HTML})=====\"")
+
+
+################################################################################
+#		SETTING DAYTRENDER PROPERTIES
+################################################################################
 
 # setting properties
 set_target_properties(daytrender PROPERTIES CXX_STANDARD 17)
@@ -63,7 +79,7 @@ find_package(OpenSSL REQUIRED)
 find_package(Threads REQUIRED)
 
 # linking daytrender libraries
-target_link_libraries(daytrender PRIVATE ${CMAKE_THREAD_LIBS_INIT} OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries(daytrender PRIVATE ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS} OpenSSL::SSL OpenSSL::Crypto)
 
 # setting include dirs
 target_include_directories(daytrender PRIVATE
@@ -71,4 +87,5 @@ target_include_directories(daytrender PRIVATE
 	"lib/cxx-logger/include"
 	"lib/cxx-utils/include"
 	"lib/cxx-plugin/include"
+	"include"
 )
