Started reimplementation of backtest functions and started moving error system over to exceptions as opposed to results.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_INSTALL_RPATH "\$ORIGIN")
 set(CMAKE_BUILD_WITH_INSTALL_RPATH true)
 
 # globbing sources for daytrender
-file(GLOB DAYTRENDER_SRCS "src/main.cpp" "src/api/*.cpp" "src/data/*.cpp" "src/util/impl.cpp")
+file(GLOB DAYTRENDER_SRCS "src/main.cpp" "src/api/*.cpp" "src/data/*.cpp" "src/util/*.cpp")
 file(GLOB STRATEGY_TYPES_SRCS src/data/strategydata.cpp src/data/indicator.cpp src/data/candle.cpp)
 file(GLOB CLIENT_TYPES_SRCS
 	"src/data/position.cpp"
